--- a/src/input.css
+++ b/src/input.css
@@ -7,9 +7,8 @@ body {
 }
 
 .navbar-fixed {
-   @apply fixed top-0 left-0 right-0 z-[99];
+   @apply fixed top-0 left-0 right-0 z-[99] backdrop-blur-sm;
    @apply bg-white/80;
-   backdrop-filter: blur(5px);
    box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);
 }
 
