--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  html {
+    scroll-behavior: smooth !important;
+  }
+}
+
 body {
    font-family: 'Inter', sans-serif;
 }
