--- a/src/input.css
+++ b/src/input.css
@@ -14,13 +14,13 @@ body {
 }
 
 .navbar-fixed {
-   @apply fixed top-0 left-0 right-0 z-[99] backdrop-blur-sm;
+   @apply fixed top-0 left-0 right-0 z-[99] backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
    @apply bg-white/80;
    box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .hamburger-line {
-   @apply w-[30px] h-[2px] my-2 block bg-dark transition duration-300 ease-in-out;
+   @apply w-[30px] h-[2px] my-2 block bg-dark transition duration-300 ease-in-out dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
@@ -32,4 +32,8 @@ body {
 }
 .hamburger-active > span:nth-child(3) {
    @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+   @apply translate-x-3;
 }
